# SantoRosarioMinimas

./: .gitignore  LINUX_BUILD.md  README.md  pyproject.toml  requirements.txt
src/: SantoRosario.spec  SantoRosario_linux.spec  main.py  reflections.json
