[project]
name = "Santo Rosario"
version = "0.1.2"
description = ""
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Camel", email = "ffarfanvazquez@gmail.com" }
]
dependencies = [
  "flet",
  "flet_audio"
]

[tool.flet]
org = "ffarfanvazquez"
product = "Santo Rosario"
company = "ffarfanvazquez"
copyright = "Copyright (C) 2025 by ffarfanvazquez"

[tool.flet.app]
path = "src"

[tool.flet.android]
min_sdk_version = 21